Save chats to device (#56)
* bump to 005

* stick w toolchain

* Create file docs/DocsNewNavigation.md

* Update docs/DocsNewNavigation.md

* Create file app/navigation/AppNavigator.tsx

* axe transcripts

* axe appnav

* initial drawer

* good lookin border

* new chat button

* onyx layout in drawer

* X button hm

* transparent hm

* Create file app/chat/ChatDrawerContent.tsx

* Update app/chat/Chat.tsx

* extract drawer content

* hierarchy

* Create file app/models/chat/ChatStorage.ts

* Update app/models/chat/ChatStore.ts

* Update app/chat/ChatDrawerContent.tsx

* chatstore

* expo sqlite install

* ok

* Refactor database initialization in ChatStorage to ensure single instance and enable WAL mode for improved performance.

* Add handleNewChat function to initiate new chats in ChatDrawerContent.

* Added initializeDatabase to ChatStorage imports in ChatStore.ts for enhanced database setup.

* Create file docs/chat-persistence.md

* Added `flow` import to `ChatStore.ts` for asynchronous actions handling in mobx-state-tree.

* Refactor: Remove unused imports in ChatStore.ts for cleaner code and improved maintainability.

* comma

* Add `useEffect` hook to imports in OnyxLayout.tsx for enhanced component lifecycle management.

* Added `Message` import from `@ai-sdk/react` in `OnyxLayout.tsx` to enhance chat functionality.

* No changes detected in OnyxLayout.tsx, commit unnecessary.

* Refactor OnyxLayout.tsx to remove unused imports and streamline component structure for better readability and performance.

* Refactor OnyxLayout.tsx to remove unused imports and enhance code readability.

* Add `ToolInvocation` import from `@ai-sdk/react` to `OnyxLayout.tsx` for enhanced tool integration.

* Refactor OnyxLayout.tsx to improve code readability and maintainability.

* Add useRef hook import to OnyxLayout for managing component references.

* Refactor OnyxLayout.tsx to enhance code readabil

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "onyx",
   "main": "app/app.tsx",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "AGPL-3.0-only",
   "scripts": {
     "start": "expo start",
@@ -14,7 +14,7 @@
     "build": "yarn build:ios:prod",
     "build:android": "yarn build:android:apk",
     "build:ios:dev": "eas build --profile development:device --platform ios --local",
-    "build:ios:prod": "EXPO_NO_KEYCHAIN=1 eas build --profile production --platform ios",
+    "build:ios:prod": "eas build --profile production --platform ios",
     "build:android:prod": "npx expo prebuild --platform android && eas build --profile production --platform android",
     "build:android:apk": "npx expo prebuild --platform android && eas build --profile production-apk --platform android",
     "prebuild:clean": "npx expo prebuild --clean --platform ios",
@@ -23,9 +23,9 @@
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
     "copy2": "cd ~/code && node md2.js ./onyx && cat model-system-docs.md | pbcopy",
-    "update:both": "eas update --channel v0.0.4 --environment production --message",
-    "update:ios": "eas update --channel v0.0.4 --environment production --platform ios --message",
-    "update:android": "eas update --channel v0.0.4 -environment production --platform android --message",
+    "update:both": "eas update --channel v0.0.5 --environment production --message",
+    "update:ios": "eas update --channel v0.0.5 --environment production --platform ios --message",
+    "update:android": "eas update --channel v0.0.5 -environment production --platform android --message",
     "hierarchy": "node scripts/generate-hierarchy.js"
   },
   "jest": {
@@ -65,6 +65,7 @@
     "expo-secure-store": "~14.0.0",
     "expo-speech": "~13.0.0",
     "expo-splash-screen": "~0.29.18",
+    "expo-sqlite": "~15.0.4",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
@@ -80,6 +81,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-document-picker": "^9.3.1",
+    "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
