--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-native-document-picker": "^9.3.1",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-keyboard-controller": "1.15.2",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
