--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": false
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["app/old/**"]
 }
