--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
+    "i18next": "24.2.0",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
