--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
     "i18next": "24.2.0",
+    "intl-pluralrules": "2.0.1",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
@@ -81,6 +82,7 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "15.2.0",
     "react-native": "0.76.5",
     "react-native-document-picker": "^9.3.1",
     "react-native-drawer-layout": "^4.1.1",
