--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@scure/base": "^1.1.1",
+    "@scure/bip32": "^1.5.0",
     "apisauce": "3.0.1",
     "assert": "^1.1.1",
     "bech32": "^2.0.0",
@@ -102,6 +103,7 @@
     "reactotron-react-native-mmkv": "^0.2.6",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.171.0",
+    "wallet-sdk": "OpenAgentsInc/wallet-sdk",
     "zod": "3.24.1",
     "zustand": "^5.0.2"
   },
