--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
     "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
+    "expo-device": "~7.0.1",
     "expo-font": "~13.0.2",
     "expo-gl": "~15.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
+    "expo-notifications": "~0.29.11",
     "expo-secure-store": "~14.0.0",
     "expo-speech": "~13.0.0",
     "expo-splash-screen": "~0.29.18",
