Add basic Bitcoin Lightning wallet via Breez SDK (#59)
* bump versions to 0.1.0

* npmrc shh

* add private spark wallet sdk

* initial spark class

* singleton

* pull in breez service

* Enhanced WalletStoreModel with balance tracking and initialization state; added SecureStorageService for improved security.

* Refactor WalletStore.ts to use breezService, add TransactionModel, and remove spark dependency.

* Refactor WalletStore.ts to remove unused imports and streamline transaction model definitions.

* securestorage

* shh

* breezservice fix type errors

* save mnemonic

* extract initialize function from walletstore

* extract setup

* Create file app/models/wallet/actions/types.ts

* Refactor `initialize` to use `IWalletStore` interface for better type safety.

* extract

* Refactor IWalletStore interface: add balance and pending transaction properties, include TransactionModel, and introduce setMnemonic method.

* Refactor setup function to use IWalletStore interface for type consistency.

* Refactor `restoreWallet` to use `IWalletStore` interface for better type safety and reset balance on wallet restoration.

* Added 'types' export and reorganized export order in index.ts for better module structure.

* Refactor WalletStore.ts to remove unused imports and streamline the code base.

* Refactor `IWalletStore` into `IWalletStoreBase` and `IWalletStore` for clearer separation of base properties and extended functionalities in `types.ts`.

* Refactor setup function to use IWalletStoreBase instead of IWalletStore for broader compatibility.

* shh

* Create file app/models/wallet/actions/fetchBalanceInfo.ts

* Create file app/models/wallet/actions/disconnect.ts

* Create file app/models/wallet/actions/fetchTransactions.ts

* Create file app/models/wallet/actions/sendPayment.ts

* Create file app/models/wallet/actions/receivePayment.ts

* Add exports for disconnect, balance, transactions, and payment f

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Onyx",
     "slug": "onyx",
     "scheme": "onyx",
-    "version": "0.0.6",
+    "version": "0.1.0",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
     "icon": "./assets/images/app-icon-all.png",
@@ -73,7 +73,7 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash.png",
-          "resizeMode": "cover",
+          "resizeMode": "contain",
           "backgroundColor": "#000000"
         }
       ]
