--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "onyx",
   "main": "app/app.tsx",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "license": "AGPL-3.0-only",
   "scripts": {
     "start": "expo start",
@@ -23,9 +23,9 @@
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
     "copy2": "cd ~/code && node md2.js ./onyx && cat model-system-docs.md | pbcopy",
-    "update:both": "eas update --channel v0.0.6 --environment production --message",
-    "update:ios": "eas update --channel v0.0.6 --environment production --platform ios --message",
-    "update:android": "eas update --channel v0.0.6 -environment production --platform android --message",
+    "update:both": "eas update --channel v0.1.0 --environment production --message",
+    "update:ios": "eas update --channel v0.1.0 --environment production --platform ios --message",
+    "update:android": "eas update --channel v0.1.0 -environment production --platform android --message",
     "hierarchy": "node scripts/generate-hierarchy.js"
   },
   "jest": {
@@ -46,27 +46,31 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "@scure/base": "^1.1.1",
+    "@scure/bip32": "^1.5.0",
     "apisauce": "3.0.1",
     "assert": "^1.1.1",
     "bech32": "^2.0.0",
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
     "buffer": "^6.0.3",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.20",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
+    "expo-device": "~7.0.1",
     "expo-font": "~13.0.2",
     "expo-gl": "~15.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
+    "expo-notifications": "~0.29.11",
     "expo-secure-store": "~14.0.0",
     "expo-speech": "~13.0.0",
     "expo-splash-screen": "~0.29.18",
-    "expo-sqlite": "~15.0.4",
+    "expo-sqlite": "~15.0.5",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
@@ -92,7 +96,7 @@
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "reactotron-core-client": "^2.9.4",
