--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "jest-expo": "~52.0.2",
     "minimatch": "9.0.3",
     "react-test-renderer": "18.3.1",
+    "sass": "^1.83.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
