--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
     "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~52.0.20",
     "expo-av": "~15.0.1",
@@ -104,6 +106,8 @@
     "reactotron-react-js": "^3.3.11",
     "reactotron-react-native": "^5.0.5",
     "reactotron-react-native-mmkv": "^0.2.6",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.171.0",
     "zod": "3.24.1",
