--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
+    "nativewind": "^4.1.23",
     "nostr-tools": "1.13.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
@@ -107,6 +108,7 @@
     "reactotron-react-native": "^5.0.5",
     "reactotron-react-native-mmkv": "^0.2.6",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.171.0",
