first button component works

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
     "@scure/base": "^1.1.1",
     "@scure/bip32": "^1.5.0",
     "apisauce": "3.0.1",
