--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "expo-web-browser": "~14.0.1",
     "i18next": "24.2.0",
     "intl-pluralrules": "2.0.1",
+    "lucide-react-native": "^0.469.0",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
@@ -103,6 +104,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "reactotron-core-client": "^2.9.4",
