Add web entry and demo knowledge graph / chat (#70)
* app wut

* hierarchy

* Wrapped App in SafeAreaProvider and added web-specific registration comments in app.tsx.

* Refactor app.tsx to include development tools, gesture handling, and custom fonts; improve keyboard management and performance optimizations.

* Create file app/models/chat/ChatStorage.web.ts

* Refactor ChatStorage.ts to separate platform-specific implementations, re-exporting from ChatStorage.native for non-web platforms.

* Create file app/models/chat/ChatStorage.native.ts

* Create file app/services/storage/secureStorage.native.ts

* Create file app/services/storage/secureStorage.web.ts

* Refactor secureStorage.ts to use platform-specific implementation from secureStorage.native for better modularity.

* Create file app/services/breez/breezService.web.ts

* Create file app/services/breez/breezService.native.ts

* Refactor `breezService.ts` to use platform-specific implementation from `breezService.native`. Removed direct SDK imports for cleaner architecture.

* card wut

* hierarchy

* Refactor Card.tsx to remove unused props and streamline Card component structure.

* Updated Card styles: fixed 'prewrap' typo to 'pre-wrap', added border and background properties for enhanced visual consistency.

* Update Card.module.scss to use new theme variables for border and background, enhancing theme consistency.

* Updated `Card.module.scss`: simplified `.card` background and removed border; modified `.children` box-shadow and padding, added scrollbars for better content management.

* scss maybe

* osint nostr

* axe scrl

* example

* npx expo install tailwindcss-animate class-variance-authority clsx tailwind-merge

* path alias also

* npx expo install nativewind tailwindcss react-native-reanimated react-native-safe-area-context

* npx tailwindcss init

* install/configure nativewind

* config rnr

* first button component works

* npx @reac

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,24 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": ["./app/*"]
+      "@/*": [
+        "./app/*"
+      ],
+      "~/*": [
+        "./app/*"
+      ]
     },
     "module": "esnext",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": false
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["app/old/**"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "nativewind-env.d.ts"
+  ],
+  "exclude": [
+    "app/old/**"
+  ]
 }
