--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
+    "@rn-primitives/context-menu": "^1.1.0",
+    "@rn-primitives/dialog": "^1.1.0",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
     "@scure/base": "^1.1.1",
     "@scure/bip32": "^1.5.0",
     "apisauce": "3.0.1",
@@ -53,6 +57,8 @@
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
     "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~52.0.20",
     "expo-av": "~15.0.1",
@@ -78,9 +84,11 @@
     "expo-web-browser": "~14.0.1",
     "i18next": "24.2.0",
     "intl-pluralrules": "2.0.1",
+    "lucide-react-native": "^0.469.0",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
+    "nativewind": "^4.1.23",
     "nostr-tools": "1.13.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
@@ -97,6 +105,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "reactotron-core-client": "^2.9.4",
@@ -104,6 +113,9 @@
     "reactotron-react-js": "^3.3.11",
     "reactotron-react-native": "^5.0.5",
     "reactotron-react-native-mmkv": "^0.2.6",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.171.0",
     "zod": "3.24.1",
@@ -120,6 +132,7 @@
     "jest-expo": "~52.0.2",
     "minimatch": "9.0.3",
     "react-test-renderer": "18.3.1",
+    "sass": "^1.83.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
