--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@expo/vector-icons": "^14.0.2",
     "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@google/generative-ai": "^0.21.0",
+    "@instawork/xmldom": "0.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
@@ -82,8 +84,10 @@
     "expo-system-ui": "~4.0.6",
     "expo-updates": "~0.26.10",
     "expo-web-browser": "~14.0.1",
+    "hyperview": "^0.87.0",
     "i18next": "24.2.0",
     "intl-pluralrules": "2.0.1",
+    "lodash": "4.17.21",
     "lucide-react-native": "^0.469.0",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
@@ -118,6 +122,8 @@
     "tailwindcss-animate": "^1.0.7",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.171.0",
+    "tiny-emitter": "2.1.0",
+    "url-parse": "1.5.10",
     "zod": "3.24.1",
     "zustand": "^5.0.2"
   },
