--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@instawork/xmldom": "0.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
