--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
+    "@react-navigation/stack": "^7.1.1",
     "@rn-primitives/context-menu": "^1.1.0",
     "@rn-primitives/dialog": "^1.1.0",
     "@rn-primitives/slot": "^1.1.0",
@@ -104,6 +105,7 @@
     "react-native-document-picker": "^9.3.1",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-keyboard-controller": "1.15.2",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
