--- a/app.json
+++ b/app.json
@@ -25,7 +25,18 @@
         "RECORD_AUDIO",
         "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
-      ]
+      ],
+      "config": {
+        "networkSecurityConfig": {
+          "cleartextTrafficPermitted": true,
+          "domainConfig": [
+            {
+              "domain": "openagents.com",
+              "cleartextTrafficPermitted": false
+            }
+          ]
+        }
+      }
     },
     "ios": {
       "icon": "./assets/images/app-icon-all.png",
@@ -42,7 +53,18 @@
       "infoPlist": {
         "NSSpeechRecognitionUsageDescription": "Allow Onyx to securely recognize your speech",
         "NSMicrophoneUsageDescription": "Allow Onyx to access your microphone for voice commands",
-        "NSPhotoLibraryUsageDescription": "Allow Onyx to access your photos for AI analysis."
+        "NSPhotoLibraryUsageDescription": "Allow Onyx to access your photos for AI analysis.",
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": false,
+          "NSExceptionDomains": {
+            "openagents.com": {
+              "NSExceptionAllowsInsecureHTTPLoads": false,
+              "NSExceptionRequiresForwardSecrecy": true,
+              "NSExceptionMinimumTLSVersion": "TLSv1.2",
+              "NSIncludesSubdomains": true
+            }
+          }
+        }
       }
     },
     "web": {
