--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "minimatch": "9.0.3",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "sass": "^1.83.1",
     "ts-node": "^10.9.2",
