--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "eventemitter3": "^5.0.1",
     "expo": "~52.0.30",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
