--- a/package.json
+++ b/package.json
@@ -64,10 +64,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "eventemitter3": "^5.0.1",
     "expo": "~52.0.30",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.5",
     "expo-crypto": "~14.0.2",
     "expo-device": "~7.0.2",
